--- a/src/main/resources/fxml/mock_window.fxml
+++ b/src/main/resources/fxml/mock_window.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -19,6 +22,22 @@
                </font>
             </Label>
                 <Button layoutX="493.0" layoutY="308.0" mnemonicParsing="false" onAction="#startReader" text="Go" />
+            <Text fx:id="fintext" layoutX="311.0" layoutY="469.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FIN" textAlignment="CENTER" visible="false" wrappingWidth="394.13671875">
+               <font>
+                  <Font size="50.0" />
+               </font>
+               <effect>
+                  <Blend />
+               </effect>
+               <fill>
+                  <RadialGradient centerX="0.5" centerY="0.5" focusDistance="1.0" radius="0.31395348837209297">
+                     <stops>
+                        <Stop color="BLACK" />
+                        <Stop color="WHITE" offset="1.0" />
+                     </stops>
+                  </RadialGradient>
+               </fill>
+            </Text>
          </children>
       </Pane>
    </center>
