--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
-<BorderPane fx:controller="speedr.gui.controllers.MainWindowController" onKeyPressed="#onKeyPressed" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.MainWindowController">
     <top>
         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
              <items>
@@ -29,7 +33,8 @@
                 </BorderPane>
                 <Pane prefHeight="200.0" prefWidth="200.0">
                     <children>
-                        <Label fx:id="promptLabel" layoutX="85.0" layoutY="352.0" text="Press P to start reading your emails" />
+                        <Label fx:id="loadingLabel" layoutX="116.0" layoutY="352.0" text="Loading emails..." />
+                        <Label fx:id="promptLabel" layoutX="116.0" layoutY="352.0" text="Press P to start reading your emails" visible="false" />
                         <Label fx:id="currentWordLabel" alignment="CENTER" layoutX="157.0" layoutY="314.0" prefHeight="100.0" prefWidth="198.0" visible="false">
                             <font>
                                 <Font size="51.0" />
