--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -47,8 +47,7 @@
                 </BorderPane>
                 <Pane prefHeight="200.0" prefWidth="200.0">
                     <children>
-                        <Label fx:id="loadingLabel" layoutX="215.0" layoutY="361.0" text="Loading emails..." />
-                        <Label fx:id="promptLabel" layoutX="116.0" layoutY="352.0" text="Press P to start reading your emails" visible="false" />
+                        <Label fx:id="promptLabel" alignment="CENTER" layoutX="9.0" layoutY="420.0" prefHeight="17.0" prefWidth="491.0" text="Press P to start reading your emails" textAlignment="CENTER" visible="false" />
                         <Label fx:id="currentWordLabel" alignment="CENTER" layoutX="77.0" layoutY="314.0" prefHeight="100.0" prefWidth="364.0" visible="false">
                             <font>
                                 <Font size="51.0" />
