Convert left GUI panel to VBox to make labels width dynamic.

--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.scene.effect.*?>
@@ -45,32 +46,20 @@
                      </font></Label>
                </top>
                 </BorderPane>
-                <Pane prefHeight="200.0" prefWidth="200.0">
-                    <children>
-                        <Label fx:id="promptLabel" alignment="CENTER" layoutX="9.0" layoutY="420.0" prefHeight="17.0" prefWidth="491.0" text="Press P to start reading your emails" textAlignment="CENTER" visible="false" />
-                        <Label fx:id="currentWordLabel" alignment="CENTER" layoutX="77.0" layoutY="314.0" prefHeight="100.0" prefWidth="364.0" visible="false">
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Region prefHeight="200.0" prefWidth="200.0" />
+                        <Label fx:id="currentWordLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="364.0" visible="false">
                             <font>
                                 <Font size="51.0" />
                             </font>
                         </Label>
-                        <Text fx:id="finishText" layoutX="311.0" layoutY="469.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FIN" textAlignment="CENTER" visible="false" wrappingWidth="394.13671875">
-                            <font>
-                                <Font size="50.0" />
-                            </font>
-                            <effect>
-                                <Blend />
-                            </effect>
-                            <fill>
-                                <RadialGradient centerX="0.5" centerY="0.5" focusDistance="1.0" radius="0.31395348837209297">
-                                    <stops>
-                                        <Stop color="BLACK" />
-                                        <Stop color="WHITE" offset="1.0" />
-                                    </stops>
-                                </RadialGradient>
-                            </fill>
-                        </Text>
-                    </children>
-                </Pane>
+                        <Label fx:id="promptLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="17.0" text="Press P to start reading your emails" textAlignment="CENTER" visible="false" />
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </VBox>
             </items>
         </SplitPane>
     </center>
