--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -35,7 +35,7 @@
     <center>
         <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
-                <BorderPane prefHeight="200.0" prefWidth="200.0">
+                <BorderPane id="left-panel" prefHeight="200.0" prefWidth="200.0">
                     <center>
                         <ListView fx:id="itemList" prefWidth="200.0" BorderPane.alignment="CENTER" />
                     </center>
@@ -46,10 +46,10 @@
                      </font></Label>
                </top>
                 </BorderPane>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox id="right-panel" minWidth="-Infinity" prefHeight="200.0" prefWidth="100.0">
                <children>
                   <Region minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                        <Label id="monocle" fx:id="currentWordLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="100.0" prefWidth="364.0" visible="false">
+                        <Label id="monocle" fx:id="currentWordLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="100.0" prefWidth="364.0" text="Hello">
                             <font>
                                 <Font size="51.0" />
                             </font>
@@ -59,9 +59,6 @@
                         </Label>
                         <Label fx:id="promptLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="17.0" text="Press P to start reading your emails" textAlignment="CENTER" visible="false" />
                </children>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
             </VBox>
             </items>
         </SplitPane>
