--- a/src/main/resources/style/speedr.css
+++ b/src/main/resources/style/speedr.css
@@ -1,6 +1,6 @@
 #monocle {
-    -fx-font-size: 48pt;
-    -fx-border-color: #666666;
+    -fx-font-size: 30pt;
+    -fx-border-color: #AAAAAA;
     -fx-border-width: 2px;
     -fx-border-style: solid;
     -fx-padding: 10 20 10 20;
