--- a/src/main/resources/style/speedr.css
+++ b/src/main/resources/style/speedr.css
@@ -3,5 +3,9 @@
     -fx-border-color: #AAAAAA;
     -fx-border-width: 2px;
     -fx-border-style: solid;
-    -fx-padding: 10 20 10 20;
+
+}
+
+.list-cell {
+    -fx-padding: 10 10 10 10;
 }
