--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -35,7 +35,7 @@
     <center>
         <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
-                <BorderPane id="left-panel" prefHeight="200.0" prefWidth="200.0">
+                <BorderPane id="left-panel">
                     <center>
                         <ListView fx:id="itemList" disable="true" prefWidth="200.0" BorderPane.alignment="CENTER" />
                     </center>
@@ -46,12 +46,11 @@
                      </font></Label>
                </top>
                 </BorderPane>
-            <VBox id="right-panel" minWidth="-Infinity" prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Region prefHeight="200.0" prefWidth="200.0" />
-                  <BorderPane prefHeight="117.0" prefWidth="453.0">
-                     <center>
-                              <Label id="monocle" fx:id="currentWordLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="146.0" prefWidth="341.0" visible="false" BorderPane.alignment="CENTER">
+            <BorderPane>
+               <center>
+                  <VBox id="right-panel" minWidth="-Infinity" prefHeight="200.0" BorderPane.alignment="CENTER">
+                     <children>
+                              <Label id="monocle" fx:id="currentWordLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="146.0" prefWidth="341.0" visible="false">
                                   <font>
                                       <Font size="51.0" />
                                   </font>
@@ -59,19 +58,14 @@
                               <Insets left="20.0" right="20.0" />
                            </padding>
                               </Label>
-                     </center>
-                     <left>
-                        <Region prefHeight="117.0" prefWidth="79.0" BorderPane.alignment="CENTER" />
-                     </left>
-                     <right>
-                        <Region prefHeight="117.0" prefWidth="88.0" BorderPane.alignment="CENTER" />
-                     </right>
-                     <bottom>
-                              <Label fx:id="promptLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="25.0" text="Press P to start reading your emails" textAlignment="CENTER" visible="false" BorderPane.alignment="CENTER" />
-                     </bottom>
-                  </BorderPane>
-               </children>
-            </VBox>
+                              <Label fx:id="promptLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="25.0" text="Press P to start reading your emails" textAlignment="CENTER" visible="false" />
+                     </children>
+                     <BorderPane.margin>
+                        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                     </BorderPane.margin>
+                  </VBox>
+               </center>
+            </BorderPane>
             </items>
         </SplitPane>
     </center>
