--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -1,71 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.effect.Blend?>
-<?import javafx.scene.paint.RadialGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.MainWindowController">
+<BorderPane onKeyPressed="#onKeyPressed" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.MainWindowController">
     <top>
-        <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-             <items>
+        <ToolBar nodeOrientation="RIGHT_TO_LEFT" BorderPane.alignment="CENTER">
+            <items>
                 <Button onAction="#onConfigureButtonClick">
-               <graphic>
+                    <graphic>
                         <ImageView>
-                           <image>
-                               <Image url="@../icons/glyphicons/glyphicons-281-settings.png" />
-                           </image>
+                            <image>
+                                <Image url="@../icons/glyphicons/glyphicons-281-settings.png"/>
+                            </image>
                         </ImageView>
-               </graphic>
+                    </graphic>
                 </Button>
-             </items>
+            </items>
         </ToolBar>
     </top>
     <center>
-        <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <SplitPane BorderPane.alignment="CENTER">
             <items>
                 <BorderPane id="left-panel">
                     <center>
-                        <ListView fx:id="itemList" disable="true" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                        <ListView fx:id="itemList" disable="true" prefWidth="200.0" BorderPane.alignment="CENTER"/>
                     </center>
-               <top>
+                    <top>
                         <Label text="Emails" BorderPane.alignment="CENTER">
-                     <font>
-                        <Font size="15.0" />
-                     </font></Label>
-               </top>
+                            <font>
+                                <Font size="15.0"/>
+                            </font>
+                        </Label>
+                    </top>
                 </BorderPane>
-            <BorderPane>
-               <center>
-                  <VBox id="right-panel" minWidth="-Infinity" prefHeight="200.0" BorderPane.alignment="CENTER">
-                     <children>
-                              <Label id="monocle" fx:id="currentWordLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="146.0" prefWidth="341.0" visible="false">
-                                  <font>
-                                      <Font size="51.0" />
-                                  </font>
-                           <padding>
-                              <Insets left="20.0" right="20.0" />
-                           </padding>
-                              </Label>
-                              <Label fx:id="promptLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="25.0" text="Press P to start reading your emails" textAlignment="CENTER" visible="false" />
-                     </children>
-                     <BorderPane.margin>
-                        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-                     </BorderPane.margin>
-                  </VBox>
-               </center>
-            </BorderPane>
+                <BorderPane>
+                    <center>
+                        <VBox id="right-panel" prefHeight="200.0" BorderPane.alignment="CENTER">
+                            <children>
+                                <Label id="monocle" fx:id="currentWordLabel" alignment="CENTER" visible="false">
+                                    <font>
+                                        <Font size="51.0"/>
+                                    </font>
+                                    <padding>
+                                        <Insets left="20.0" right="20.0"/>
+                                    </padding>
+                                </Label>
+                                <Label fx:id="promptLabel" alignment="CENTER"
+                                       text="Press P to start reading your emails" textAlignment="CENTER"
+                                       visible="false"/>
+                            </children>
+                            <BorderPane.margin>
+                                <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
+                            </BorderPane.margin>
+                        </VBox>
+                    </center>
+                </BorderPane>
             </items>
         </SplitPane>
     </center>
