--- a/src/main/resources/fxml/splash.fxml
+++ b/src/main/resources/fxml/splash.fxml
@@ -5,25 +5,23 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane onKeyPressed="#onKeyPressed" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: de6262;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.MainWindowController">
+<BorderPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: de6262;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.SplashController">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox maxWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="98.0" prefWidth="624.0" text="Speedr" textFill="WHITE">
                <font>
                   <Font name="Arial Bold Italic" size="44.0" />
                </font>
             </Label>
-            <ProgressBar maxWidth="1.7976931348623157E308" minHeight="0.0" prefHeight="14.0" prefWidth="624.0" progress="0.0" />
+            <TextField prefHeight="25.0" prefWidth="512.0" promptText="hostname" text="imap.gmail.com" />
+            <TextField promptText="user" text="speedrorg@gmail.com" />
+            <PasswordField promptText="pass" text="speedrspeedr" />
+            <Separator prefHeight="12.0" prefWidth="220.0" visible="false" />
+            <Button fx:id="loginButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="25.0" prefWidth="92.0" text="Log in" />
          </children>
       </VBox>
    </center>
-   <left>
-      <Region prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </left>
-   <right>
-      <Region prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </right>
    <top>
       <Region prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </top>
