--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<BorderPane onKeyPressed="#onKeyPressed" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.MainWindowController">
+<BorderPane onKeyPressed="#onKeyPressed" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.MainWindowController">
     <top>
         <ToolBar nodeOrientation="RIGHT_TO_LEFT" BorderPane.alignment="CENTER">
             <items>
@@ -17,7 +14,7 @@
                     <graphic>
                         <ImageView>
                             <image>
-                                <Image url="@../icons/glyphicons/glyphicons-281-settings.png" />
+                                <Image url="@../icons/glyphicons/glyphicons-281-settings.png"/>
                             </image>
                         </ImageView>
                     </graphic>
@@ -30,47 +27,68 @@
             <items>
                 <BorderPane id="left-panel">
                     <center>
-                        <ListView fx:id="itemList" disable="true" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                        <ListView fx:id="itemList" disable="true" prefWidth="200.0" BorderPane.alignment="CENTER"/>
                     </center>
                     <top>
                         <Label text="Emails" BorderPane.alignment="CENTER">
                             <font>
-                                <Font size="15.0" />
+                                <Font size="15.0"/>
                             </font>
                         </Label>
                     </top>
                 </BorderPane>
-                <BorderPane prefHeight="200.0" prefWidth="200.0">
+                <BorderPane>
                     <center>
-                        <GridPane alignment="CENTER" prefHeight="100.0" BorderPane.alignment="CENTER">
+                        <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
 
                             <columnConstraints>
-                                <ColumnConstraints hgrow="ALWAYS" />
+                                <ColumnConstraints hgrow="ALWAYS"/>
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints vgrow="NEVER" />
-                                <RowConstraints vgrow="NEVER" />
+                                <RowConstraints vgrow="NEVER"/>
+                                <RowConstraints valignment="CENTER" vgrow="NEVER"/>
+                                <RowConstraints vgrow="NEVER"/>
+                                <RowConstraints vgrow="NEVER"/>
                             </rowConstraints>
                             <children>
-                                <AnchorPane>
-                                    <children>
 
-                                        <Label id="monocle" fx:id="currentWordLabel" alignment="CENTER" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" GridPane.fillWidth="true" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0">
+                                <AnchorPane GridPane.rowIndex="0">
+                                    <children>
+                                        <Label alignment="CENTER_LEFT" AnchorPane.leftAnchor="30">Leading in...</Label>
+                                    </children>
+                                </AnchorPane>
+
+                                <AnchorPane GridPane.rowIndex="1">
+                                    <children>
+                                        <Label id="monocle" fx:id="currentWordLabel" alignment="CENTER" layoutY="50.0"
+                                               visible="false" AnchorPane.leftAnchor="51.0"
+                                               AnchorPane.rightAnchor="63.0" GridPane.fillWidth="true"
+                                               GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER">
                                             <font>
-                                                <Font size="51.0" />
+                                                <Font size="51.0"/>
                                             </font>
                                             <padding>
-                                                <Insets left="20.0" right="20.0" />
+                                                <Insets left="20.0" right="20.0"/>
                                             </padding>
                                         </Label>
                                     </children>
                                     <padding>
-                                        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                                        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
                                     </padding>
                                 </AnchorPane>
 
+                                <AnchorPane GridPane.rowIndex="2">
+                                    <children>
+                                        <Label alignment="CENTER_RIGHT" textAlignment="RIGHT"
+                                               AnchorPane.rightAnchor="30">...and out
+                                        </Label>
+                                    </children>
+                                </AnchorPane>
 
-                                <Label fx:id="promptLabel" alignment="CENTER" text="Press P to start reading your emails" textAlignment="CENTER" visible="false" GridPane.fillWidth="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                                <Label fx:id="promptLabel" alignment="CENTER"
+                                       text="Press P to start reading your emails" textAlignment="CENTER"
+                                       visible="false" GridPane.fillWidth="true" GridPane.halignment="CENTER"
+                                       GridPane.hgrow="ALWAYS" GridPane.rowIndex="3"/>
 
                             </children>
                         </GridPane>
@@ -78,32 +96,42 @@
                     <bottom>
                         <AnchorPane BorderPane.alignment="CENTER">
                             <children>
-                                <HBox alignment="CENTER" prefHeight="90.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                <HBox alignment="CENTER" prefHeight="90.0" AnchorPane.leftAnchor="0.0"
+                                      AnchorPane.rightAnchor="0.0">
                                     <children>
-                                        <Button fx:id="btnBack" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest" prefHeight="30.0" prefWidth="30.0">
+                                        <Button fx:id="btnBack" maxHeight="30.0" maxWidth="30.0" minHeight="30.0"
+                                                minWidth="30.0" mnemonicParsing="false"
+                                                onAction="#handleStreamChangeRequest" prefHeight="30.0"
+                                                prefWidth="30.0">
                                             <graphic>
                                                 <ImageView>
                                                     <image>
-                                                        <Image url="@../icons/glyphicons/glyphicons-225-chevron-left.png" />
+                                                        <Image url="@../icons/glyphicons/glyphicons-225-chevron-left.png"/>
                                                     </image>
                                                 </ImageView>
                                             </graphic>
                                         </Button>
-                                        <Button fx:id="btnBreakout" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest" prefHeight="30.0" prefWidth="30.0">
+                                        <Button fx:id="btnBreakout" maxHeight="30.0" maxWidth="30.0" minHeight="30.0"
+                                                minWidth="30.0" mnemonicParsing="false"
+                                                onAction="#handleStreamChangeRequest" prefHeight="30.0"
+                                                prefWidth="30.0">
                                             <graphic>
                                                 <ImageView>
                                                     <image>
-                                                        <Image url="@../icons/glyphicons/glyphicons-601-chevron-up.png" />
+                                                        <Image url="@../icons/glyphicons/glyphicons-601-chevron-up.png"/>
                                                     </image>
                                                 </ImageView>
                                             </graphic>
                                         </Button>
 
-                                        <Button fx:id="btnSkip" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest" prefHeight="30.0" prefWidth="30.0">
+                                        <Button fx:id="btnSkip" maxHeight="30.0" maxWidth="30.0" minHeight="30.0"
+                                                minWidth="30.0" mnemonicParsing="false"
+                                                onAction="#handleStreamChangeRequest" prefHeight="30.0"
+                                                prefWidth="30.0">
                                             <graphic>
                                                 <ImageView>
                                                     <image>
-                                                        <Image url="@../icons/glyphicons/glyphicons-224-chevron-right.png" />
+                                                        <Image url="@../icons/glyphicons/glyphicons-224-chevron-right.png"/>
                                                     </image>
                                                 </ImageView>
                                             </graphic>
