--- a/src/main/resources/fxml/splash.fxml
+++ b/src/main/resources/fxml/splash.fxml
@@ -27,4 +27,11 @@
    <top>
       <Region prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </top>
+   <bottom>
+      <Label fx:id="errorLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="58.0" prefWidth="200.0" textFill="WHITE" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
+   </bottom>
 </BorderPane>
