--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -92,22 +92,22 @@
                     <bottom>
                         <AnchorPane BorderPane.alignment="CENTER">
                             <children>
-                                <HBox alignment="CENTER" prefHeight="90.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                <HBox alignment="CENTER" prefHeight="90.0" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                     <children>
-                                        <Button fx:id="btnBack" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest" prefHeight="30.0" prefWidth="30.0">
+                              <Button fx:id="btnSkipBack" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest" prefHeight="30.0" prefWidth="30.0">
+                                 <graphic>
+                                    <ImageView>
+                                       <image>
+                                          <Image url="@../icons/glyphicons/glyphicons-172-fast-backward.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                                        <Button fx:id="btnPause" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest" prefHeight="30.0" prefWidth="30.0">
                                             <graphic>
                                                 <ImageView>
                                                     <image>
-                                                        <Image url="@../icons/glyphicons/glyphicons-225-chevron-left.png" />
-                                                    </image>
-                                                </ImageView>
-                                            </graphic>
-                                        </Button>
-                                        <Button fx:id="btnBreakout" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest" prefHeight="30.0" prefWidth="30.0">
-                                            <graphic>
-                                                <ImageView>
-                                                    <image>
-                                                        <Image url="@../icons/glyphicons/glyphicons-601-chevron-up.png" />
+                                                        <Image url="@../icons/glyphicons/glyphicons-175-pause.png" />
                                                     </image>
                                                 </ImageView>
                                             </graphic>
@@ -117,7 +117,7 @@
                                             <graphic>
                                                 <ImageView>
                                                     <image>
-                                                        <Image url="@../icons/glyphicons/glyphicons-224-chevron-right.png" />
+                                                        <Image url="@../icons/glyphicons/glyphicons-178-fast-forward.png" />
                                                     </image>
                                                 </ImageView>
                                             </graphic>
